src/screens/Requests/Requests.module.css
.btnsContainer {
  display: flex;
  margin: 2.5rem 0 2.5rem 0;
}

.btnsContainer .btnsBlock {
  display: flex;
}

.btnsContainer .btnsBlock button {
  margin-left: 1rem;
  display: flex;
  justify-content: center;
  align-items: center;
}

.btnsContainer .input {
  flex: 1;
  position: relative;
}

.btnsContainer input {
  outline: 1px solid var(--bs-gray-400);
}

.btnsContainer .input button {
  width: 52px;
}

.listBox {
  width: 100%;
  flex: 1;
}

.notFound {
  flex: 1;
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
}


@media (max-width: 1020px) {
  .btnsContainer {
    flex-direction: column;
    margin: 1.5rem 0;
  }

  .btnsContainer .btnsBlock {
    margin: 1.5rem 0 0 0;
    justify-content: space-between;
  }

  .btnsContainer .btnsBlock button {
    margin: 0;
  }

  .btnsContainer .btnsBlock div button {
    margin-right: 1.5rem;
  }
}


/* For mobile devices  */

@media (max-width: 520px) {
  .btnsContainer {
    margin-bottom: 0;
  }

  .btnsContainer .btnsBlock {
    display: block;
    margin-top: 1rem;
    margin-right: 0;
  }

  .btnsContainer .btnsBlock div {
    flex: 1;
  }

  .btnsContainer .btnsBlock div[title="Sort organizations"] {
    margin-right: 0.5rem;
  }

  .btnsContainer .btnsBlock button {
    margin-bottom: 1rem;
    margin-right: 0;
    width: 100%;
  }
}

